--- a/notebooks/tutorials.ipynb
+++ b/notebooks/tutorials.ipynb
@@ -18,16 +18,36 @@
     "## single family learning\n",
     "using Revise, HopfieldDCA\n",
     "\n",
-    "f = 14; H = 21; n_ep = 60; alg = HopPlmVar_gen(H, seq_paths_dict[f], T = Float32); η = 0.5; λ = 0.001;  @time m,n = trainer_J(alg, n_ep, η = η, λ = λ, \n",
+    "f = 14; H = 21; n_ep = 150; alg = HopPlmVar_gen(H, seq_paths_dict[f], T = Float32); η = 0.5; λ = 0.001;  @time m,n = trainer_J(alg, n_ep, η = η, λ = λ, \n",
     "    structfile = structs_dict[f],\n",
     "    folder = folders_dict[f], \n",
     "    savefile = folders_dict[f],\n",
     "    orthog = false,\n",
-    "    fig_save = true, \n",
-    "    par_save = true);\n",
+    "    fig_save = false, \n",
+    "    par_save = false);\n",
     "\n",
+    "#fixed V\n",
     "\n",
-    "f = 14; H = 32; n_ep = 20; alg = HopPlmVar_gen(H, seq_paths_dict[f], T = Float32); η = 0.05; λ = Float32(0.001);  @time K,n = trainer_J_fixedV(alg, n_ep, V, η = η, λ = λ, \n",
+    "f = 105; H = 21; n_ep = 150; alg = HopPlmVar_gen(H, seq_paths_dict[f], T = Float32); η = 0.05; λ = Float32(0.001);  @time K,n = trainer_J_fixedV(alg, n_ep, V, η = η, λ = λ, \n",
+    "    structfile = structs_dict[f],\n",
+    "    folder = folders_dict[f], \n",
+    "    savefile = folders_dict[f], \n",
+    "    fig_save = false, \n",
+    "    par_save = false);\n",
+    "\n",
+    "#fixed V on subsample\n",
+    "\n",
+    "f = 105; H = 21; n_ep = 150; n_seq = 200; alg = HopPlmVar_gen(H, seq_paths_dict[f], n_seq, T = Float32); η = 0.05; λ = Float32(0.001);  @time K,n = trainer_J_fixedV(alg, n_ep, V, η = η, λ = λ, \n",
+    "    structfile = structs_dict[f],\n",
+    "    folder = folders_dict[f], \n",
+    "    savefile = folders_dict[f], \n",
+    "    fig_save = false, \n",
+    "    par_save = false);\n",
+    "\n",
+    "#fixed K on subsample\n",
+    "\n",
+    "f = 105; H = 21; n_ep = 150; n_seq = 200; alg = HopPlmVar_gen(H, seq_paths_dict[f], n_seq, T = Float32); η = 0.05; λ = Float32(0.001);  @time m,n = \n",
+    "HopfieldDCA.trainer_J_fixedK(alg, n_ep, K, V, η = η, λ = λ, \n",
     "    structfile = structs_dict[f],\n",
     "    folder = folders_dict[f], \n",
     "    savefile = folders_dict[f], \n",
@@ -35,15 +55,19 @@
     "    par_save = true);\n",
     "\n",
     "\n",
-    "f = 14; H = 32; n_ep = 11; alg = HopPlmVar_full(H, seq_paths_dict[f], T = Float32); η = 0.5; λ = 0.001;  @time m,n = trainer_fullJ(alg, n_ep, η = η, λ = λ, \n",
+    "#full Hopfield\n",
+    "\n",
+    "f = 14; H = 128; n_ep = 110; alg = HopPlmVar_full(H, seq_paths_dict[f], T = Float32); η = 0.5; λ = 0.001;  @time m,n = trainer_fullJ(alg, n_ep, η = η, λ = λ, \n",
     "    structfile = structs_dict[f],\n",
     "    folder = folders_dict[f], \n",
     "    savefile = folders_dict[f],\n",
     "    orthog = false,\n",
-    "    fig_save = true, \n",
-    "    par_save = true);\n",
+    "    fig_save = false, \n",
+    "    par_save = false);\n",
     "\n",
-    "f = 763; H = 10; n_ep = 2; alg = HopPlmVar_full(H, seq_paths_dict[f], T = Float32); η = 0.5; λ = 0.001;  @time m,n = trainer_fullJ(alg, n_ep, η = η, λ = λ, \n",
+    "\n",
+    "\n",
+    "f = 13354; H = 00; n_ep = 2; alg = HopPlmVar_full(H, seq_paths_dict[f], T = Float32); η = 0.5; λ = 0.001;  @time m,n = trainer_fullJ(alg, n_ep, η = η, λ = λ, \n",
     "    structfile = structs_dict[f],\n",
     "    folder = folders_dict[f], \n",
     "    savefile = folders_dict[f], \n",
@@ -57,19 +81,85 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "fs = [169, 595, 677, 13354]; n_eps = [150, 150, 250, 250]\n",
+    "for i in 1:length(fs)\n",
+    "    f = fs[i]\n",
+    "    H = 256; n_ep = n_eps[i]; alg = HopPlmVar_full(H, seq_paths_dict[f], T = Float32); η = 0.2; λ = 0.01;  @time m,n = trainer_fullJ(alg, n_ep, η = η, λ = λ, \n",
+    "           structfile = structs_dict[f],\n",
+    "           folder = folders_dict[f], \n",
+    "           savefile = folders_dict[f],\n",
+    "           orthog = false,\n",
+    "           fig_save = true, \n",
+    "           par_save = true);\n",
+    "end\n",
+    "\n",
+    "\n",
+    "fs = [677, 763, 13354]; n_eps = [700, 700, 700]\n",
+    "for i in 1:length(fs)\n",
+    "    f = fs[i]\n",
+    "    H = 128; n_ep = n_eps[i]; alg = HopPlmVar_full(H, seq_paths_dict[f], T = Float32); η = 0.2; λ = 0.001;  @time m,n = trainer_fullJ(alg, n_ep, η = η, λ = λ, \n",
+    "           structfile = structs_dict[f],\n",
+    "           folder = folders_dict[f], \n",
+    "           savefile = folders_dict[f],\n",
+    "           orthog = false,\n",
+    "           fig_save = true, \n",
+    "           par_save = true);\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "fs = [35, 169, 595, 677, 763, 13354]; n_eps = [250, 100, 250, 350, 450, 450]\n",
+    "for i in 1:length(fs)\n",
+    "    f = fs[i]; println(\"FAM : $(f)\");\n",
+    "    H = 128; n_ep = n_eps[i]; alg = HopPlmVar_full(H, seq_paths_dict[f], T = Float32);\n",
+    "    \n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#multi family learning\n",
     "using Revise, HopfieldDCA\n",
-    "fs = [14, 35, 76, 677, 763]; H = 32; algs = [HopPlmVar_gen(H, seq_paths_dict[f], T = Float32) \n",
+    "\n",
+    "#semi_hopfield francesco family\n",
+    "\n",
+    "#fixed V\n",
+    "fs = [14, 35, 76, 677, 763]; H = 21; algs = [HopPlmVar_gen(H, seq_paths_dict[f], T = Float32) \n",
     "    for f in fs]; \n",
     "n_ep = 2; η = 0.5; lambda = Float32(0.001); @time Ks = multitrainer_fixedV(fs, algs, n_ep, V, η = η, lambda = lambda,\n",
     "savefile = \"../ciao.txt\", fig_save = true);\n",
     "\n",
+    "\n",
+    "#normal\n",
     "fs = [14, 35, 76, 677, 763]; H = 21; algs = [HopPlmVar_gen(H, seq_paths_dict[f], T = Float32) \n",
     "    for f in fs]; \n",
-    "n_ep = 20; η = 0.05; lambda = 0.001; @time m = multitrainer(fs, algs, n_ep, \n",
+    "n_ep = 70; η = 0.05; lambda = 0.001; @time m = multitrainer(fs, algs, n_ep, \n",
     "    η = η, lambda = lambda, savefile = \"../ciao.txt\", \n",
-    "    fig_save = true, par_save = true, orthog = true, \n",
-    "    each_step = 5, ort = 50);\n",
+    "    fig_save = true, par_save = true, orthog = false, \n",
+    "    each_step = 10, ort = 50);\n",
+    "\n",
+    "#full_hopfield francesco family\n",
+    "\n",
+    "fs = [14, 35, 76, 677, 763]; H = 128; algs = [HopPlmVar_full(H, seq_paths_dict[f], T = Float32) \n",
+    "    for f in fs]; \n",
+    "n_ep = 70; η = 0.5; lambda = 0.001; @time m = multitrainer_full(fs, algs, n_ep, \n",
+    "    η = η, lambda = lambda, savefile = \"../ciao.txt\", \n",
+    "    fig_save = true, par_save = true, orthog = false, \n",
+    "    each_step = 10);\n",
     "\n"
    ]
   },
@@ -88,6 +178,52 @@
     "    fig_save = true, par_save = true, orthog = false, \n",
     "    each_step = 5, ort = 50);\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "ppvs = []\n",
+    "f = 105; H = 21; n_ep = 300;  Zs = [100, 200, 500, 1000, 2000, 5000]; for n_seq in Zs\n",
+    "    alg = HopPlmVar_gen(H, seq_paths_dict[f], n_seq, T = Float32); η = 0.5; λ = 0.001;  @time m,n = trainer_J(alg, n_ep, η = η, λ = λ, \n",
+    "    structfile = structs_dict[f],\n",
+    "    folder = folders_dict[f], \n",
+    "    savefile = folders_dict[f],\n",
+    "    orthog = false,\n",
+    "    fig_save = false, \n",
+    "    par_save = false);\n",
+    "    s = score(m.K, m.V); ppv = compute_PPV(s, structs_dict[f]);\n",
+    "    push!(ppvs, ppv)\n",
+    "end\n",
+    "\n",
+    "ppvs_fixed_V = []\n",
+    "f = 105; H = 21; n_ep = 300;  Zs = [100, 200, 500, 1000, 2000, 5000]; for n_seq in Zs\n",
+    "    alg = HopPlmVar_gen(H, seq_paths_dict[f], n_seq, T = Float32); η = 0.05; λ = Float32.(0.001);  @time K,n = trainer_J_fixedV(alg, n_ep, V, η = η, λ = λ, \n",
+    "    structfile = structs_dict[f],\n",
+    "    folder = folders_dict[f], \n",
+    "    savefile = folders_dict[f], \n",
+    "    fig_save = false, \n",
+    "    par_save = false);\n",
+    "    s = score(K, V); ppv = compute_PPV(s, structs_dict[f]);\n",
+    "    push!(ppvs_fixed_V, ppv)\n",
+    "end\n",
+    "\n",
+    "\n",
+    "for i in 1:length(Zs)\n",
+    "    fig,ax1 = plt.subplots() \n",
+    "    ax1.plot(ppvs[i], label=\"Hop\")\n",
+    "    ax1.plot(ppvs_fixed_V[i], label=\"Hop fix V\")\n",
+    "    ax1.set_xscale(\"log\")\n",
+    "    ax1.set_xlabel(\"Number of Predictions\")\n",
+    "    ax1.set_ylabel(\"PPV\")\n",
+    "    ax1.legend()\n",
+    "    savefig(\"../F$(f)Z$(Zs[i]).png\"); \n",
+    "end\n"
    ]
   },
   {
@@ -151,8 +287,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "structfile = \"../DataAttentionDCA/data/PF00014/PF00014_struct.dat\"\n",
-    "s = HopfieldDCA.score(m.K, m.V); PPV_h = HopfieldDCA.compute_PPV(s, structfile);\n",
+    "structfile = structs_dict[595]\n",
+    "s = HopfieldDCA.score_full(m.K, m.V); PPV_h = HopfieldDCA.compute_PPV(s, structfile);\n",
     "ssm = HopfieldDCA.score(m1.K, m1.V); PPV_h_sm = HopfieldDCA.compute_PPV(ssm, structfile);\n",
     "close(\"all\"); loglog(PPV_h_sm, label=\"H = 21\"); loglog(PPV_h, label=\"H = 32\");legend();savefig(\"ciao.png\");\n",
     "\n"
@@ -176,6 +312,194 @@
     "        push!(x,dot(m.V[:,i]./norm(m.V[:,i]),m.V[:,j]./norm(m.V[:,j])))\n",
     "    end \n",
     "end; close(\"all\");hist(x); savefig(\"../ort50_sf_V.png\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "for i in 1:length(Zs)\n",
+    "    fig,ax1 = plt.subplots() \n",
+    "    ax1.plot(ppv[i], label=\"Hop\")\n",
+    "    ax1.plot(ppvs_fixed_V[i], label=\"Hop fix V\")\n",
+    "    ax1.set_xscale(\"log\")\n",
+    "    ax1.set_xlabel(\"Number of Predictions\")\n",
+    "    ax1.set_ylabel(\"PPV\")\n",
+    "    ax1.legend()\n",
+    "    savefig(\"../Z$(Zs[i]).png\"); \n",
+    "end\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@load joinpath(folders_dict[f], \"PPV_plm.jld2\") splm\n",
+    "fig,ax1 = plt.subplots();ax1.plot(ppv, label=\"Hop\");ax1.plot(ppv_V, \n",
+    "    label=\"Hop fix V\"); ax1.plot(splm, label=\"Plm\"); ax1.set_xscale(\"log\");ax1.set_xlabel(\"Number of \n",
+    "    Predictions\");ax1.set_ylabel(\"PPV\");ax1.legend();savefig(\"../$(f)comp.png\"); \n",
+    "\n",
+    "\n",
+    "fig,ax1 = plt.subplots();ax1.plot(ppv, label=\"Hop\");ax1.plot(ppv_V, \n",
+    "    label=\"Hop fix V\"); ax1.set_xscale(\"log\");ax1.set_xlabel(\"Number of \n",
+    "    Predictions\");ax1.set_ylabel(\"PPV\");ax1.legend();savefig(\"../$(f)comp.png\"); "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "UndefVarError: `plt` not defined",
+     "output_type": "error",
+     "traceback": [
+      "UndefVarError: `plt` not defined",
+      "",
+      "Stacktrace:",
+      " [1] top-level scope",
+      "   @ In[1]:1"
+     ]
+    }
+   ],
+   "source": [
+    "cc = [100, 500, 1000]; f = 14; fig,ax1 = plt.subplots(); for n_cont in cc\n",
+    "    s = HopfieldDCA.score_full2(m.K, m.V, top_c = n_cont); \n",
+    "    ppv = compute_PPV(s, structs_dict[f])\n",
+    "    println(n_cont)\n",
+    "    ax1.plot(ppv, label = \"CC = $(n_cont)\")\n",
+    "end; ax1.plot(PPV_h, label = \"Frob_norm\"); ax1.set_xscale(\"log\"); ax1.set_xlabel(\"Number of \n",
+    "    Predictions\"); ax1.set_ylabel(\"PPV\");  ax1.legend(); savefig(\"../f$(f)cont_anal.png\");  \n",
+    "    \n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ppvs = []; ppvs_plm = []; f = 14; H = 21; n_ep = 350;  Zs = [100, 500, 1000]; for n_seq in Zs\n",
+    "    alg = HopPlmVar_gen(H, seq_paths_dict[f], n_seq, T = Float32); η = 0.5; λ = Float32.(0.001);  @time K,n = trainer_J_fixedV(alg, n_ep, V, η = η, λ = λ, \n",
+    "    structfile = structs_dict[f],\n",
+    "    folder = folders_dict[f], \n",
+    "    savefile = folders_dict[f], \n",
+    "    fig_save = false, \n",
+    "    par_save = false);\n",
+    "    res = plmdca_asym(alg.Z, Float64.(alg.W) ./ sum(Float64.(alg.W)), lambdaJ=0.01,lambdaH=0.01,epsconv=1e-12);\n",
+    "    ppv_plm = compute_PPV(res.score, structs_dict[f]);\n",
+    "    s = score(K, m.V); ppv = compute_PPV(s, structs_dict[f]);\n",
+    "    push!(ppvs, ppv)\n",
+    "    push!(ppvs_plm, ppv_plm)\n",
+    "    \n",
+    "end\n",
+    "\n",
+    "fig,ax1 = plt.subplots(); for i in 1:length(Zs)\n",
+    "    ax1.plot(ppvs[i], label=\"Hop fix V $(Zs[i])\")\n",
+    "    ax1.plot(ppvs_plm[i], label=\"Plm $(Zs[i])\") \n",
+    "end; ax1.set_xscale(\"log\"); ax1.set_xlabel(\"Number of \n",
+    "    Predictions\"); ax1.set_ylabel(\"PPV\"); ax1.legend(); savefig(\"../subsample_fixedV$(f).png\");\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ppvs = []; ppvs_plm = []; f = 14; H = 32; n_ep = 1000;  Zs = [100, 500, 1000]; for n_seq in Zs\n",
+    "           alg = HopPlmVar_gen(H, seq_paths_dict[f], n_seq, T = Float32); η = 0.5; λ = 0.001;  @time m,n = trainer_J(alg, n_ep, η = η, λ = λ, \n",
+    "           structfile = structs_dict[f],\n",
+    "           folder = folders_dict[f], \n",
+    "           savefile = folders_dict[f],\n",
+    "           orthog = false,\n",
+    "           fig_save = false, \n",
+    "           par_save = false);\n",
+    "           res = plmdca_asym(alg.Z, Float64.(alg.W) ./ sum(Float64.(alg.W)), lambdaJ=0.01,lambdaH=0.01,epsconv=1e-12);\n",
+    "           ppv_plm = compute_PPV(res.score, structs_dict[f]);\n",
+    "           s = score(m.K, m.V); ppv = compute_PPV(s, structs_dict[f]);\n",
+    "           push!(ppvs, ppv)\n",
+    "           push!(ppvs_plm, ppv_plm) \n",
+    "       end\n",
+    "\n",
+    "fig,ax1 = plt.subplots(); for i in 1:length(Zs)\n",
+    "    ax1.plot(ppvs[i], label=\"Hop fix V $(Zs[i])\")\n",
+    "    ax1.plot(ppvs_plm[i], label=\"Plm $(Zs[i])\") \n",
+    "end; ax1.set_xscale(\"log\"); ax1.set_xlabel(\"Number of \n",
+    "    Predictions\"); ax1.set_ylabel(\"PPV\"); ax1.legend(); savefig(\"../subsample_fixedV$(f).png\");\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## field test \n",
+    "\n",
+    "en0 = rand(21, 53, size(alg.Z,2)); J = rand(21,53,21,53); en = zeros(21,53,size(alg.Z,2)); h = rand(21, 53); for a in 1:21 for i in 1:53  for m in 1:8871 \n",
+    "       en[a, i, m] = en0[a,i,m] + h[a, i]\n",
+    "        end end end; en2 = en0 .+ h; sum(abs2, en2 .- en)\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using StatsBase, HopfieldDCA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ss = ar_gen(m.K, m.V, m.h, size(alg.Z,2)); fsil = compute_weighted_frequencies(ss, \n",
+    "    0);  f = compute_weighted_frequencies(Int8.(alg.Z), 0.2);\n",
+    "fig, ax = plt.subplots(); ax.scatter(f[1][:], fsil[1][:], label=\n",
+    "    \"$(round(cor(f[1][:], fsil[1][:]), digits = 2))\");  ax.set_xlabel(\"Data\"); ax.set_ylabel(\n",
+    "    \"Model\"); ax.set_title(\"1-point\"); ax.legend();savefig(\n",
+    "    \"../new1generative_semi_fields.png\"); fig, ax = plt.subplots();ax.scatter(f[2][:], fsil[2][:], label=\n",
+    "    \"$(round(cor(f[2][:], fsil[2][:]), digits = 2))\");ax.set_xlabel(\"Data\"); ax.set_ylabel(\"Model\"\n",
+    "    ); ax.set_title(\"2-point\"); ax.legend(); savefig(\n",
+    "    \"../new2generative_semi_fields.png\")\n",
+    "\n",
+    "\n",
+    "ss = ar_gen(m.K, m.V, size(alg.Z,2)); fsil = compute_weighted_frequencies(ss, \n",
+    "    0);  f = compute_weighted_frequencies(Int8.(alg.Z), 0.2);\n",
+    "fig, ax = plt.subplots(); ax.scatter(f[1][:], fsil[1][:], label=\n",
+    "    \"$(round(cor(f[1][:], fsil[1][:]), digits = 2))\");  ax.set_xlabel(\"Data\"); ax.set_ylabel(\n",
+    "    \"Model\"); ax.set_title(\"1-point\"); ax.legend();savefig(\n",
+    "    \"../1generative_semi_nofields.png\"); fig, ax = plt.subplots();ax.scatter(f[2][:], fsil[2][:], label=\n",
+    "    \"$(round(cor(f[2][:], fsil[2][:]), digits = 2))\");ax.set_xlabel(\"Data\"); ax.set_ylabel(\"Model\"\n",
+    "    ); ax.set_title(\"2-point\"); ax.legend(); savefig(\n",
+    "    \"../2generative_semi_nofields.png\")\n",
+    "\n",
+    "\n",
+    "ss = ar_gen(m.K, m.V, m.h, size(alg.Z,2)); fsil = compute_weighted_frequencies(ss, \n",
+    "    0);  f = compute_weighted_frequencies(Int8.(alg.Z), 0.2);\n",
+    "fig, ax = plt.subplots(); ax.scatter(f[1][:], fsil[1][:], label=\n",
+    "    \"$(round(cor(f[1][:], fsil[1][:]), digits = 2))\");  ax.set_xlabel(\"Data\"); ax.set_ylabel(\n",
+    "    \"Model\"); ax.set_title(\"1-point\"); ax.legend();savefig(\n",
+    "    \"../new1generative_full_fields.png\"); fig, ax = plt.subplots();ax.scatter(f[2][:], fsil[2][:], label=\n",
+    "    \"$(round(cor(f[2][:], fsil[2][:]), digits = 2))\");ax.set_xlabel(\"Data\"); ax.set_ylabel(\"Model\"\n",
+    "    ); ax.set_title(\"2-point\"); ax.legend(); savefig(\n",
+    "    \"../new2generative_full_fields.png\")\n",
+    "\n"
    ]
   }
  ],
